[package]
name = "re-parse-proc-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
fxhash = "0.2.1"
syn = "2.0.90"
proc-macro2 = "1.0.92"
quote = "1.0.37"
thiserror = "2.0.3"
insta = "1.41.1"